stepflow-rs/crates/stepflow-flow/src/snapshots/stepflow_flow__discriminator_schema__tests__custom_tagged_result_schema.snap
---
source: crates/stepflow-flow/src/discriminator_schema.rs
expression: value
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: CustomTaggedResult
oneOf:
  - title: Success
    type: object
    properties:
      outcome:
        type: string
        const: success
      value: {}
    required:
      - outcome
      - value
  - title: Failure
    type: object
    properties:
      outcome:
        type: string
        const: failure
      error:
        type: string
    required:
      - outcome
      - error
discriminator:
  propertyName: outcome
