stepflow-rs/crates/stepflow-flow/src/snapshots/stepflow_flow__discriminator_schema__tests__discriminated_enum_schema.snap
---
source: crates/stepflow-flow/src/discriminator_schema.rs
expression: value
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: DiscriminatedEnum
oneOf:
  - type: object
    properties:
      type:
        type: string
        const: unitVariant
    required:
      - type
  - type: object
    properties:
      value:
        type: string
      type:
        type: string
        const: dataVariant
    required:
      - type
      - value
discriminator:
  propertyName: type
