stepflow-rs/crates/stepflow-flow/src/snapshots/stepflow_flow__discriminator_schema__tests__full_pipeline_schema.snap
---
source: crates/stepflow-flow/src/discriminator_schema.rs
expression: value
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: PipelineEnum
oneOf:
  - $ref: "#/$defs/Fail"
  - $ref: "#/$defs/UseDefault"
  - $ref: "#/$defs/Retry"
discriminator:
  propertyName: action
  mapping:
    fail: "#/$defs/Fail"
    useDefault: "#/$defs/UseDefault"
    retry: "#/$defs/Retry"
$defs:
  Fail:
    title: Fail
    type: object
    properties:
      action:
        type: string
        const: fail
        default: fail
    required:
      - action
  UseDefault:
    title: UseDefault
    type: object
    properties:
      default_value: true
      action:
        type: string
        const: useDefault
        default: useDefault
    required:
      - action
      - default_value
  Retry:
    title: Retry
    type: object
    properties:
      action:
        type: string
        const: retry
        default: retry
    required:
      - action
